[tool.poetry]
name = "docker"
version = "0.1.0"
description = "test package for docker"
authors = ["carrowmw <c.morris-wiltshire@newcastle.ac.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scikit-learn = "^1.5.2"
pandas = "^2.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
